Version 2.x.x [not yet released]
* SD card protection
* Upgrade MicroPython to 1.12

Version 2.3.0 [not yet released]
* Passphrase redesign

Version 2.2.0 [Jan 2020]
* Remove unused ButtonRequest.data field
* Rework Recovery persistence internally
* Disallow changing of settings via dry-run recovery
* Add feature to retrieve the next U2F counter
* Fix continuous display blinking with Android in U2F
* U2F UX improvements
* Wipe code
* Add screen for time bounds in Stellar

Version 2.1.8 [Nov 2019]
* Support Tezos 005-BABYLON hardfork
* Show XPUBs in GetAddress for multisig
* Security improvements

Version 2.1.7 [Oct 2019]
* Fix low memory issue

Version 2.1.6 [Oct 2019]
* Refactor Shamir related codebase
* Super Shamir
* FIDO2
* FIDO2 credential management via trezorctl
* BackupType in Features
* Fix storage keys module visbility bug (6ad329) introduced in 2.1.3 (46e4c0) which was breaking fw upgrades

Version 2.1.5 [Sep 2019]
* Fix for sluggish U2F authentication when using Shamir
* Fix UI for Shamir with 33 words
* Fix Wanchain signing
* Binance Coin support
* Introduce Features.Capabilities

Version 2.1.4 [Aug 2019 hotfix]
* Shamir Backup reset device hotfix

Version 2.1.3 [Aug 2019]
* Shamir Backup with Recovery persistence
* Touchscreen freeze fix
* Fix display of non-divisible OMNI amounts

Version 2.1.2 [unreleased]
* Shamir Backup feature preview

Version 2.1.1 [Jun 2019]
* Hotfix for touchscreen freeze
* Don't rotate the screen via swipe gesture
* Set screen rotation via user setting
* More strict path validations
* Display non-zero locktime values
* EOS support
* Monero UI fixes
* Speed and memory optimizations

Version 2.1.0 [Mar 2019]
* Security improvements
* Upgraded to new storage format
* Ripple, Stellar, Cardano and NEM fixes
* New coins: ATS, AXE, FLO, GIN, KMD, NIX,
  PIVX, REOSC, XPM, XSN, ZCL
* New ETH tokens
* Included bootloader 2.0.3

Version 2.0.10 [Dec 2018]
* Fix Monero payment ID computation
* Fix issue with touch screen and flickering